@@ -1883,6 +1883,10 @@ TclNRExecuteByteCode(
 {
     Interp *iPtr = (Interp *) interp;
     BottomData *BP;
+    int size = sizeof(BottomData) + sizeof(CmdFrame) +
+	    + (codePtr->maxStackDepth + codePtr->maxExceptDepth)
+	         *(sizeof(Tcl_Obj *));
+    int numWords = (size + sizeof(Tcl_Obj *) - 1)/sizeof(Tcl_Obj *);
     
     if (iPtr->execEnvPtr->rewind) {
 	return TCL_ERROR;
@@ -1902,9 +1906,7 @@ TclNRExecuteByteCode(
      * execution stack is large enough to execute this ByteCode.
      */
 
-    BP = (BottomData *) GrowEvaluationStack(iPtr->execEnvPtr,
-	    sizeof(BottomData) + codePtr->maxExceptDepth + sizeof(CmdFrame)
-	    + codePtr->maxStackDepth, 0);
+    BP = (BottomData *) GrowEvaluationStack(iPtr->execEnvPtr, numWords, 0);
     esPtr->tosPtr = initTosPtr;
     
     BP->codePtr     = codePtr;
